--- a/BingBong.html
+++ b/BingBong.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<audio autoplay src="music.mp3">
 <div id="banner">
 <h1>Bana's Travel Blog</h1>
 </div>
