--- a/BingBong.html
+++ b/BingBong.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bana's Travel Blog</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="style.css">
+<title>Trump's Pet Peeve (Bitcoin)</title>
 </head>
 <body>
 <audio autoplay src="Bombs Away - China All The Time Ft. Donald Trump (1).mp3">
